--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="assets/js/jquery-1.5.2.js"></script> 
 	<script type="text/javascript" src="assets/js/jquery.mobile-1.0a4.1.min.js"></script> 
   <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+  <script type="text/javascript" charset="utf-8" src="assets/js/camera.js"></script>
 </head> 
 <body class="ui-mobile-viewport">
 <div data-role="page">
@@ -21,11 +22,11 @@
       <button type="submit" data-theme="a" name="submit" value="submit-value" class="ui-btn-hidden" aria-disabled="false" style="width:90%;">Submit</button>
     </div>
   </form>
-  <div onload="onLoad()">
-    <button onclick="capturePhoto();">Capture Photo</button> <br>
-    <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
-    <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
-    <button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">From Photo Album</button><br>
+  <div onload="corrupt.onLoad()">
+    <button onclick="corrupt.capturePhoto()">Capture Photo</button> <br>
+    <button onclick="corrupt.capturePhotoEdit()">Capture Editable Photo</button> <br>
+    <button onclick="corrupt.getPhoto(pictureSource.PHOTOLIBRARY)">From Photo Library</button><br>
+    <button onclick="corrupt.getPhoto(pictureSource.SAVEDPHOTOALBUM)">From Photo Album</button><br>
     <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
     <img style="display:none;" id="largeImage" src="" />
   </div>
