--- a/index.html
+++ b/index.html
@@ -1,36 +1,84 @@
-
 <!DOCTYPE html> 
 <html> 
-<head> 
-	<meta charset="utf-8"> 
-	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"> 
-	<title>jQuery Mobile: Demos and Documentation</title> 
-	<link rel="stylesheet"  href="assets/css/jquery.mobile-1.0a4.1.min.css" /> 
-	<script type="text/javascript" src="assets/js/jquery-1.5.2.js"></script> 
-	<script type="text/javascript" src="assets/js/jquery.mobile-1.0a4.1.min.js"></script> 
-  <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
-  <script type="text/javascript" charset="utf-8" src="assets/js/camera.js"></script>
-</head> 
-<body class="ui-mobile-viewport">
-<div data-role="page">
-  <div data-role="content" class="ui-content">
-    <form action="form.php" method="post">
-    <div data-role="fieldcontain">
-    	<textarea rows="8" name="textarea" id="textarea" style="width:90%;"></textarea>
+  <head> 
+    <meta charset="utf-8">
+    <link href="http://code.google.com/apis/maps/documentation/javascript/examples/default.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="assets/css/jquery.mobile-1.0a4.min.css" />
+    <link href="assets/css/layout.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-1.5.2.js"></script> 
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="assets/js/bribable.js"></script>
+    <script type="text/javascript" src="assets/js/camera.js"></script>
+    <script type="text/javascript">
+      $(document).bind("mobileinit", function(){
+          //apply overrides here
+          $.mobile.ajaxFormsEnabled = false;
+          $.mobile.allowCrossDomainPages = true;
+          });
+
+$(document).ready(function() {
+    // corrupt.onLoad(); require phonegap?
+    Bribable.init({showMessages: false});
+    $('#main-form').submit(function(event) {
+      $.post('http://10.0.1.131:9292/messages', $(this).serialize(), function(data, status){
+        if (data.redirect) {
+        alert('Got a redirect!')
+        } else {
+        $('#response').innerHTML = 'req/res success!';
+        }
+        });
+      event.preventDefault();
+      });
+    });
+  </script>
+<script type="text/javascript" src="assets/js/jquery.mobile-1.0a4.min.js"></script>
+  </head> 
+  <body>
+    <div data-role="page">
+      <div  data-role="header">Report Corruption Anonymously</div> 
+      <div  data-role="content">
+        <form action="http://corrupt.mobi/messages" method="get" id='main-form'>
+          <input type="hidden" id="lat" name="message[lat]" value="">
+          <input type="hidden" id="long" name="message[long]" value="">
+          <input type="hidden" id="initial_lat" name="initial[lat]" value="">
+          <input type="hidden" id="initial_long" name="initial[long]" value="">
+          <h2>What happened?</h2>
+
+          <p>Type in what happened. Put names in quotes like 'Dr Evil'.</p>
+
+          <textarea name="message[message]" rows="8" cols="40"></textarea>
+
+          <h2>Where did this happen?</h2>
+
+          <p>Pinpoint the location as accurately as you can by dragging the map</p>
+
+          <div id="map_container">
+            <div id="map_canvas"></div>
+          </div>
+
+          <input type="hidden" name="message[image]" id="image-data" value="" />
+          
+          <div id="camera">
+            <button onclick="corrupt.capturePhotoEdit()">Capture Photo</button> <br>
+            <button onclick="corrupt.getPhoto(navigator.camera.PictureSourceType.PHOTOLIBRARY)">From Photo Library</button><br>
+            <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+            <img style="display:none;" id="largeImage" src="" />
+          </div>
+
+          <input type="submit" name="op" id="submit-1" value="Submit" class="form-submit">
+        </form>
+      </div>
+
+      <div  data-role="footer">Some sort of Navigation</div> 
+      <div id='response'></div>
+      <div id='btm'>
+        <p><a href="http://www.corrupt.mobi">Corrupt.mobi</a> is a <a href="http://www.hackforchange.com">HackforChange</a>
+        project inspired by
+        <a href="http://hackforchange.uservoice.com/forums/113515-hack-for-change/suggestions/1931313-help-save-monterrey-mexico-if-monterrey-falls-m">Help
+          Save Monterrey, Mexico</a></p>
+      </div>
     </div>
-    <div data-theme="a" class="ui-btn ui-btn-corner-all ui-shadow ui-btn-hover-a ui-btn-down-a" aria-disabled="false">
-      <button type="submit" data-theme="a" name="submit" value="submit-value" class="ui-btn-hidden" aria-disabled="false" style="width:90%;">Submit</button>
-    </div>
-  </form>
-  <div onload="corrupt.onLoad()">
-    <button onclick="corrupt.capturePhoto()">Capture Photo</button> <br>
-    <button onclick="corrupt.capturePhotoEdit()">Capture Editable Photo</button> <br>
-    <button onclick="corrupt.getPhoto(pictureSource.PHOTOLIBRARY)">From Photo Library</button><br>
-    <button onclick="corrupt.getPhoto(pictureSource.SAVEDPHOTOALBUM)">From Photo Album</button><br>
-    <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
-    <img style="display:none;" id="largeImage" src="" />
-  </div>
-  </div>
-</div>
-</body>
+  </body>
 </html>
